--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/.sqlite3-
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -14,6 +18,8 @@
 !/tmp/.keep
 
 # Ignore pidfiles, but keep the directory.
+/log/*
+/tmp/*
 /tmp/pids/*
 !/tmp/pids/
 !/tmp/pids/.keep
@@ -21,11 +27,50 @@
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
-/tmp/storage/*
-!/tmp/storage/
-!/tmp/storage/.keep
 
 /public/assets
+.byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+# Ignore all logfiles and tempfiles.
+/log/*
+/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+/node_modules
+/yarn-error.log
+
+.DS_Store
+**/.DS_Store
+_packaged
+*.patch
+*.sqlite3
+*.log
+public/*.jpg
+log/
+.#*
+.*~
+.idea/*
+.sass-cache/
+tmp/
+public/assets/
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+config/secrets/aws.yml
+config/secrets/send_grid.yml
+/public/packs
+/node_modules
+yarn-debug.log*
+.yarn-integrity
